refactor: 💡 migrate deprecated apis of reflection package